fix z-indexs

--- a/static/web_components/ticket_holder_dropdown.css
+++ b/static/web_components/ticket_holder_dropdown.css
@@ -76,6 +76,8 @@
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
+        z-index: 1;
+
 
         &.hidden {
             display: none;
